using CustomLib.Models.Comments;

namespace CustomLib.Interfaces
{
    public interface CommentsInterface : AbstractInterface<CommentGet, CommentPost, CommentPut>
    {

    }
}
